frontend/test/should_fail/edge_model_006.gm
arbitrary edge class A extends UEdge;
